tests/baselines/reference/parserComputedPropertyName33.errors.txt
parserComputedPropertyName33.ts(3,6): error TS2304: Cannot find name 'e'.
parserComputedPropertyName33.ts(4,6): error TS2304: Cannot find name 'e2'.
parserComputedPropertyName33.ts(4,12): error TS1005: ';' expected.
parserComputedPropertyName33.ts(5,1): error TS1128: Declaration or statement expected.


==== parserComputedPropertyName33.ts (4 errors) ====
    class C {
        // No ASI
        [e] = 0
         ~
!!! error TS2304: Cannot find name 'e'.
        [e2]() { }
         ~~
!!! error TS2304: Cannot find name 'e2'.
               ~
!!! error TS1005: ';' expected.
    }
    ~
!!! error TS1128: Declaration or statement expected.